Start Jena Fuseki from report

--- a/report/2024-02-23/report.qmd
+++ b/report/2024-02-23/report.qmd
@@ -23,6 +23,11 @@ Sys.setenv(HERE=here::here())
 ```
 
 
+```{r, engine='bash', include=FALSE}
+cd $HERE
+make db-fuseki-up
+```
+
 ```{r}
 # Step 1 - Set up preliminaries and define query
 # Define the endpoint
