--- a/report/2024-02-23/report.qmd
+++ b/report/2024-02-23/report.qmd
@@ -44,14 +44,20 @@ qd <- SPARQL(endpoint,query)
 df <- qd$results
 
 # Step 3 - Prep for graphing
+recode_map <- tribble(
+	~iri,                                                                                  ~dataset,
+	"<https://ice.ntp.niehs.nih.gov/?file=brick/ice.hdt>",                                 'ice',
+	"<https://www.epa.gov/chemical-research/toxicity-forecasting?file=brick/toxcast.hdt>", 'toxcast'
+) |> pull(dataset, name = iri )
+
 df <- df |>
 	mutate(across(c(graph), as.factor)) |>
-	rename graph IRIs to simple names
-	mutate(graph = recode(graph,
-			"<https://ice.ntp.niehs.nih.gov/?file=brick/ice.hdt>" = 'ice',
-			"<https://www.epa.gov/chemical-research/toxicity-forecasting?file=brick/toxcast.hdt>" = 'toxcast'
-		)) |>
+	# rename graph IRIs to simple names
+	mutate(graph = recode(graph, !!! recode_map )) |>
 	# one-hot encoding by graph name
 	dcast(assay ~ graph, value.var = 'graph', length )
 str(df)
+```
+```{r}
+upset(df, recode_map)
 ```
